src/app/_components/Header/Nav/index.module.scss
@use '../../../_css/queries.scss' as *;

.nav {
  display: flex;
  gap: calc(var(--base) / 4) var(--base);
  align-items: center;
  flex-wrap: wrap;
  opacity: 1;
  transition: opacity 100ms linear;
  visibility: visible;

  > * {
    text-decoration: none;
  }

  @include small-break {
    display: none;
  }
}

.nav a:not(.userIconContainer a) {
  margin: 0 0.5rem;
}

@include small-break {
  .nav {
    padding-left: 0;
    padding-right: 0;
  }

  .nav a:not(.userIconContainer a) {
    padding-left: 0;
    padding-right: 0;
    font-weight: 400;
    color: #080707;
    width: 100%;
  }

  .mobileSpanText {
    padding-left: 0;
    padding-right: 0;
    display: block;
    position: relative;
    padding-bottom: 1rem;
  
    &::after {
      content: '';
      display: block;
      position: absolute;
      bottom: 0;
      width: 100%;
      height: 1px;
      background-color: #080707;
    }
  }
}

.hide {
  opacity: 0;
  visibility: hidden;
}

.navButton {
  transition: background-color 0.2s ease-in-out;
}

.navButton:hover {
  background: #191717;
}

@include small-break {
  .buttonForLargeScreen {
    display: none;
  }
}

// Hamburger styles
.hamburger {
  display: none;
  cursor: pointer;
  background: none;
  border: none;
  color: #080707;
}

@include small-break {

  .hamburger {
    display: block;
    position: absolute;
    left: 10px;
  }
    
  .nav {
    display: flex;
    position: fixed;
    top: 0;
    left: -100%; 
    height: 100vh;
    width: 80vw; 
    font-size: 1.5rem;
    background-color: #fff; 
    transition: left 0.3s ease-in-out;
    flex-direction: column;
    align-items: flex-start; 
    justify-content: flex-start;
    margin-top: 0;
    padding-top: 0;
    padding: 4rem 3rem; 
    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
    z-index: 2000;
  }
  
  .nav a:not(.userIconContainer a) {
    display: block;
    position: relative;
    padding: 1rem 0;
    margin-left: 0;
    margin-right: 0;
  }
  
  .navBackdrop {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(1.5px);
    display: none;
    z-index: 1000; 
  }
  
  .navBackdrop.isOpen {
    display: block;
  }

  .nav.isOpen {
    left: 0; 
  }

  .closeIcon {
    display: none;
    position: absolute;
    top: 1rem;
    left: 1rem;
    cursor: pointer;
    font-size: 34px;
    z-index: 2100; 
    color: #080707;
  }

  .nav.isOpen .closeIcon {
    display: block;
  }
  
  .userIconContainer {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;
    position: absolute;
    bottom: 1rem;
    left: 0;
    gap: 0.5rem;
    margin-left: 1rem;
    
    a {
      display: flex;
      align-items: center;
      gap: 0.5rem;
    }

    .accountLink {
      display: flex;
      align-items: center;
      gap: 0.5rem;
    }

    .contactLink {
      display: flex;
      align-items: center;
      gap: 0.5rem;
    }

    .linkGroup {
      display: flex;
      flex-direction: column;
      gap: 0.5rem;
    }
    
    .spanText {
      font-size: 1rem;
      color: #322f2f;
    }
  }

  .accountLgScreen {
    display: none;
  }
}

